--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
+    "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-http": "^1.5.16",
+    "graphql-tag": "^2.10.1",
+    "jest": "^24.9.0",
+    "js-cookie": "^2.2.1",
     "react": "^16.11.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
