--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "apollo-client": "^2.6.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
+    "bootstrap": "^4.3.1",
     "graphql-tag": "^2.10.1",
     "jest": "^24.9.0",
     "js-cookie": "^2.2.1",
     "react": "^16.11.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "reactstrap": "^8.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
