--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reach/router": "^1.2.1",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "bootstrap": "^4.3.1",
+    "cross-env": "^6.0.3",
     "graphql-tag": "^2.10.1",
     "jest": "^24.9.0",
     "js-cookie": "^2.2.1",
+    "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "reactstrap": "^8.1.1"
+    "react-svg-radar-chart": "^1.2.0",
+    "reactstrap": "^8.1.1",
+    "router": "^1.3.3",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
