--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-link-http": "^1.5.16",
     "bootstrap": "^4.3.1",
     "cross-env": "^6.0.3",
+    "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jest": "^24.9.0",
     "js-cookie": "^2.2.1",
