--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "star-wars-app",
+  "jest": {
+    "collectCoverage": true
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,6 +24,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-svg-radar-chart": "^1.2.0",
+    "react-test-renderer": "^16.11.0",
     "reactstrap": "^8.1.1",
     "router": "^1.3.3",
     "styled-components": "^4.4.1"
@@ -28,7 +32,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "set CI=true && react-scripts test",
+    "test:coverage": "set CI=true && react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "husky": {
