--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "star-wars-app",
-  "jest": {
-    "collectCoverage": true
-  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-testing": "^3.1.3",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
@@ -15,6 +14,7 @@
     "cross-env": "^6.0.3",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "jest-styled-components": "^6.3.3",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
