--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "set CI=true && react-scripts test --coverage",
+    "test:coverage": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "husky": {
