--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
-language: node_js
-node_js:
-  - 8
-cache:
-  directories:
-    - node_modules
-script:
+before_deploy:
   - npm run build
-  - npm test
+  - tar czvf build.tar.gz -C build
+deploy:
+  - provider: releases
+    skip_cleanup: true # Don't re-run the tests
+    github_token: $827eadc1562ada428fe09198109b732d2d261c43
+    file: "./build.tar.gz"
+    skip_cleanup: true
+    on:
+      tags: true
+      branch: master
+   
