--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
 script:
   - npm test
   - npm run build
+  - '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && npm test || npm run pull-test'
 branches:
   except:
     - /^pr\..*/ 
