--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "lint-staged": "^9.4.2"
