--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,16 @@ cache:
   directories:
     - node_modules
 script:
-  - npm test
-  - npm run build
-  - '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && npm test || npm run pull-test'
+    - '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && npm test || npm run build'
+# blocklist
 branches:
   except:
-    - /^pr\..*/ 
+  - legacy
+  - experimental
+
+# safelist
+branches:
+  only:
+  - master
+  - stable
    
