--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ cache:
   directories:
     - node_modules
 script:
-    - '[ "${TRAVIS_PULL_REQUEST}" = "false" ] && npm test || npm run build'
+- npm test
+- npm run build
+#- if [ "$TRAVIS_PULL_REQUEST" == true ]; then bash ./travis/run_on_pull_requests; fi
 
 # safelist
 branches:
