--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql-tag": "^2.10.1",
     "jest-styled-components": "^6.3.3",
     "js-cookie": "^2.2.1",
+    "netlify-cli": "^2.20.2",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-apollo": "^3.1.3",
