--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,10 @@
+[build]
+base = "/"
+publish = "/build/"
+command = "npm run build"
+
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "/episodes"
   status = 200
   force = true
