--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^6.0.3",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "graphql.macro": "^1.4.2",
     "jest-styled-components": "^6.3.3",
     "js-cookie": "^2.2.1",
     "netlify-cli": "^2.20.2",
