--- a/.github/workflows/master_deploy.yml
+++ b/.github/workflows/master_deploy.yml
@@ -17,9 +17,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install Packages
       run: npm install
-    - name: Deploy to GH Pages
+    - name: Deploy 
       run: |
-        git config --global user.email "kirilstoqnov@gmail.com>"
-        git config --global user.name "kstoqnov>"
-        git remote set-url origin https://4857dd85954c3fb14301b5a35cc06d82fc27dc92>@github.com/kstoqnov>/star-wars-app>.git
         npm run deploy
