--- a/.github/workflows/master_deploy.yml
+++ b/.github/workflows/master_deploy.yml
@@ -20,3 +20,8 @@ jobs:
     - name: Deploy 
       run: |
         npm run deploy
+    - name: deploy to netlifly
+      runs-on: ubuntu-latest
+    steps:
+      - name: Curl request
+        run: curl -X POST -d {} https://api.netlify.com/build_hooks/5dc31ee5d5d82c01858521f7
