--- a/.github/workflows/master_deploy.yml
+++ b/.github/workflows/master_deploy.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install Packages
         run: npm install
     - name: tests
-        run: npm run test
+        run: npm test
     - name: Deploy 
     - run: |
         curl -X POST -d {} https://api.netlify.com/build_hooks/5dc31ee5d5d82c01858521f7
