--- a/.github/workflows/master_deploy.yml
+++ b/.github/workflows/master_deploy.yml
@@ -15,10 +15,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Install Packages
-    - run: npm install
-    - name: tests
-    - run: npm run test
+    - name: Install and test Packages
+    - run: | 
+          npm install
+          npm run test
     - name: Deploy 
     - run: |
         curl -X POST -d {} https://api.netlify.com/build_hooks/5dc31ee5d5d82c01858521f7
