--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "start": "react-scripts start",
     "deploy": "node --version",
     "build": "react-scripts build",
-    "test:git": "react-scripts test",
     "test": "set CI=true && react-scripts test --coverage",
     "test:coverage": "set CI=true && react-scripts test --coverage",
+    "test-workflow": "set CI=true && react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
   "husky": {
